--- a/AlexNet_Plant_Disease_Classification.ipynb
+++ b/AlexNet_Plant_Disease_Classification.ipynb
@@ -631,7 +631,7 @@
       "source": [
         "#saving model\n",
         "filepath=\"model.hdf5\"\n",
-        "classifier.save(filepath)\n"
+        "classifier.save('model.hdf5')\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -726,7 +726,7 @@
       },
       "source": [
         "!pip install tensorflowjs\r\n",
-        "!tensorflowjs_converter --input_format keras \"googlenet_flower.h5\" /content/jj"
+        "!tensorflowjs_converter --input_format keras \"model.hdf5\" /content/jj"
       ],
       "execution_count": null,
       "outputs": []
